@@ -1,3 +1,7 @@
+r53:
++ Added Follow Animator
++ Added Physic Camera Node (Beta)
+
 r52:
 + Fixed bug in the raycast test functions
 
